--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Index</title>
+</head>
+<body>
+	<a href="prezi.html">Презентация</a>
+</body>
+</html>
